--- a/ui/public/stylesheets/form.css
+++ b/ui/public/stylesheets/form.css
@@ -13,6 +13,26 @@
     height: 60%;
 }
 
+#facebook-link {
+    background-color: #3B5998;
+    color: rgb(246, 247, 248);
+}
+
+#facebook-link:hover {
+    background-color: #a4aeda;
+    color: rgba(245, 250, 250, 0.87);
+}
+
+#google-link {
+    background-color: rgb(170, 41, 19);
+    color: rgb(246, 247, 248);
+}
+
+#google-link:hover {
+    background-color: rgb(182, 93, 77);
+    color: rgb(246, 247, 248);
+}
+
 #signupform {
     background-color: #fff;
     border: 1px solid white;
@@ -20,7 +40,7 @@
 }
 
 #signupform h2 {
-    margin: 5px 10px;
+    margin: 2px 10px;
     text-align: center;
 }
 
@@ -55,7 +75,7 @@ input[type="password"]:focus {
 #signbutton {
     width: 235px;
     height: 30px;
-    background-color: blue;
+    background-color: #0000ff;
     font-size: 20px;
     font-family: sans-serif;
     color: white;
