--- a/ui/public/stylesheets/form.css
+++ b/ui/public/stylesheets/form.css
@@ -133,7 +133,7 @@ input[type="password"]:focus {
     margin: 0;
 }
 
-#submit-btn {
+#btn-primary {
     background-color: #00bcdf;
     padding: 10px;
     line-height: 16px;
@@ -142,4 +142,85 @@ input[type="password"]:focus {
     font-size: 16px;
     outline: none;
     cursor: hand;
+}
+
+
+/* styles for admin dashboard */
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 8fr 1fr;
+    grid-auto-rows: minmax(200px, auto);
+}
+
+#table-container {
+    padding: 20px;
+    border-radius: 5px;
+}
+
+table#meetup-table {
+    width: 100%;
+    border-collapse: collapse;
+    /* border: 2px solid black; */
+    /* border-radius: 20px; */
+}
+
+td,
+th {
+    text-align: left;
+    padding: 10px;
+}
+
+th {
+    border-bottom: 1px solid #dddddd;
+    font-size: 18px;
+    padding: 18px;
+    line-height: 24px;
+}
+
+tbody tr:hover {
+    background-color: #00bcdf;
+    color: fff;
+    cursor: hand;
+}
+
+table tr:last-child td:first-child {
+    border-bottom-left-radius: 10px;
+}
+
+table tr:last-child td:last-child {
+    border-bottom-right-radius: 10px;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+
+/* .dropdown-btn {} */
+
+.dropdown-content {
+    position: absolute;
+    display: none;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    text-decoration: none;
+    display: block;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    color: #000;
+}
+
+.show {
+    display: block;
 }
