improve index.html

--- a/ui/public/stylesheets/form.css
+++ b/ui/public/stylesheets/form.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgba(63, 63, 70, 0.336);
+    /* background-color: rgba(63, 63, 70, 0.336); */
 }
 
 
@@ -89,7 +89,7 @@ input[type="password"]:focus {
 }
 
 
-/* styles for newmeetup */
+/* Cascading style sheet  for the for newmeetup */
 
 #form-container {
     display: grid;
@@ -148,7 +148,7 @@ input[type="password"]:focus {
 }
 
 
-/* styles for admin dashboard */
+/* Cascading style sheet  for the admin dashboard page*/
 
 .grid-container {
     display: grid;
