--- a/ui/public/stylesheets/meetup.css
+++ b/ui/public/stylesheets/meetup.css
@@ -1,13 +1,23 @@
 main {
-    margin: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    width: 80%;
+    margin: 20px auto 20px auto;
+}
+
+div #title-meetups {
+    text-align: center;
+    font-size: 30px;
+    font-weight: lighter;
+    color: #087584;
+    margin-top: 12px;
+    margin-bottom: 30px;
 }
 
 .card {
     background-color: #fff;
-    border: 1px solid black;
+    border: 1px solid #ddd;
     border-radius: 20px;
     margin-bottom: 20px;
     padding: 10px;
@@ -16,7 +26,24 @@ main {
     height: 20%;
 }
 
-main div h2 {
+.card-description {
+    border-top: 1px solid #ddd;
+}
+
+.card-title {
+    font-size: 20px;
+    font-weight: lighter;
     text-align: center;
     margin: 10px 0;
+}
+
+#see-more-btn {
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#event-image {
+    width: 100%;
+    height: 215px;
 }
