--- a/ui/public/stylesheets/header.css
+++ b/ui/public/stylesheets/header.css
@@ -5,7 +5,7 @@
         
         header nav {
             background-color: #fff;
-            ;
+            overflow-x: hidden;
         }
         
         nav ul {
@@ -16,7 +16,7 @@
         nav ul li a {
             color: #087584;
             text-decoration: none;
-            font-size: 1.1 rem;
+            font-size: 16px;
             text-transform: capitalize;
         }
         
@@ -29,6 +29,7 @@
         
         #logo {
             font-size: 30px;
+            padding-left: 25px;
         }
         
         .menu-item {
