--- a/ui/public/stylesheets/meetup_detail.css
+++ b/ui/public/stylesheets/meetup_detail.css
@@ -1,7 +1,7 @@
 /* Styles for meetup detail forms */
 
 .meetup_detail_container {
-    /* bigger container */
+    margin: 40px;
 }
 
 .meetup_detail_banner {
@@ -21,12 +21,15 @@
     background-size: 100%;
     background-position: center center;
     background-repeat: no-repeat;
+    margin-right: 20px;
 }
 
 .meetup_info {
     text-align: center;
     border: 1px solid #000;
     padding: 10px;
+    background-color: #fff;
+    color: #087584;
 }
 
 .meetup_info div ul li {
@@ -44,11 +47,14 @@
 }
 
 #top_meetup_questions {
-    border: 1px solid black;
+    background-color: #fff;
 }
 
 #top_meetup_questions h3 {
     text-align: center;
+    color: #087584;
+    font-weight: bold;
+    font-size: 25px;
 }
 
 .question_card {
@@ -62,6 +68,9 @@
 
 .ask_question_card p {
     text-align: center;
+    color: #087584;
+    font-weight: bold;
+    font-size: 25px;
 }
 
 .ask_question_card textarea {
@@ -77,4 +86,6 @@
     height: 20%;
     border: 1px solid #ddd;
     border-radius: 5px;
+    color: #087584;
+    font-size: 16px;
 }
