[starts #163097368] edit signup page

--- a/ui/public/stylesheets/form.css
+++ b/ui/public/stylesheets/form.css
@@ -60,6 +60,8 @@ legend {
     letter-spacing: 0.2em;
 }
 
+input[type="firstName"],
+input[type="lastName"],
 input[type="email"],
 input[type="password"] {
     display: block;
